start script added

--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "to-do-List Server",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+	"start": "nodemon index.js"
+},
   "author": "Amar kuamr",
   "license": "ISC",
   "keywords": [],
