--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-	"start": "nodemon index.js"
-},
+    "start": "nodemon index.js"
+  },
   "author": "Amar kuamr",
   "license": "ISC",
   "keywords": [],
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.3"
   }
